# bigboss-api-

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  pyproject.toml
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.dev.yml
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  middleware.py  security.py  storage.py
app/modules/auth/: dependencies.py  exceptions.py  models.py  public.py  repository.py  router.py  schemas.py  service.py
app/modules/end_users/: dependencies.py  exceptions.py  models.py  public.py  repository.py  router.py  schemas.py  service.py
app/modules/menus/: dependencies.py  exceptions.py  models.py  public.py  repository.py  router.py  schemas.py  service.py
app/modules/orders/: dependencies.py  exceptions.py  models.py  public.py  repository.py  router.py  schemas.py  service.py
app/modules/tenant_admins/: exceptions.py  models.py  public.py  repository.py  router.py  schemas.py  service.py
app/modules/tenants/: dependencies.py  exceptions.py  models.py  public.py  repository.py  router.py  schemas.py  service.py
app/shared/: base_model.py  base_repository.py  base_schema.py  enums.py  exceptions.py  utils.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
scripts/: seed.py
tests/: conftest.py
tests/integration/: conftest.py  test_auth_api.py  test_menu_api.py  test_orders_api.py
tests/unit/modules/auth/: test_auth_service.py
